# cPythonDemo

./: CMakeLists.txt  README.md
1_1/: CMakeLists.txt  main.cpp
1_1/utils/: utils.cpp  utils.h
script/: build.bat  build_xcode.sh
src/: CMakeLists.txt  initializer.cpp  initializer.h  main.cpp  utils.h  utils_mac.cpp  utils_win.cpp
third/mac/: adjust_install_name.py
